--- a/styles.css
+++ b/styles.css
@@ -48,23 +48,17 @@ button:hover {
     box-shadow: 0px 0px 20px black;
 }
 
-.aprovado {
-    background-image: none;
-    background-color: #89db89;
-    color: #005500;
-}
-
-.recuperacao {
-    background-image: none;
-    background-color: #dbda89;
-    color: #a89e0d;
-}
-
-.reprovado {
-    background-image: none;
-    background-color: #e46161;
-    ;
-    color: #aa0c07;
+#circle-result-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    text-align: center;
+    background-color: seashell;
+    height: 50%;
+    width: 50%;
+    border-radius: 100%;
 }
 
 .font-red {
@@ -81,4 +75,17 @@ button:hover {
 
 .letra-grande-plus {
     font-size: 30px;
+}
+
+#circle-result-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    text-align: center;
+    background-color: white;
+    height: 50%;
+    width: 50%;
+    border-radius: 100%;
 }
