--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(#ccc, white);
+    background-image: linear-gradient(#d64161, white);
 }
 
 form {
